回数カウンター機能実装 - 1日ごとにリセット、カウントアップアニメーション追加

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
     <div class="container">
         <h1>ルーレットチャレンジ</h1>
+        <div class="spin-counter">
+            <p>今日の回数: <span id="spinCount">0</span>回</p>
+        </div>
         <div class="roulette-wrapper">
             <div class="roulette-container">
                 <div class="arrow"></div>
